[gd_scene load_steps=21 format=2]

[ext_resource path="res://Scenes/GUI/Overhead/BattlefieldHUD.gd" type="Script" id=1]
[ext_resource path="res://assets/UI/Panels/unitInfoBox.png" type="Texture2D" id=2]
[ext_resource path="res://assets/font/Main Font.ttf" type="FontFile" id=3]
[ext_resource path="res://assets/UI/Panels/emptyHealthBar.png" type="Texture2D" id=4]
[ext_resource path="res://assets/UI/Panels/fullHealthBar.png" type="Texture2D" id=5]
[ext_resource path="res://assets/units/eirika/eirikaPortrait.png" type="Texture2D" id=6]
[ext_resource path="res://assets/UI/Panels/victoryConditionBox.png" type="Texture2D" id=7]
[ext_resource path="res://assets/UI/Panels/terrainInfoBox.png" type="Texture2D" id=8]
[ext_resource path="res://assets/font/Font_Resource.tres" type="FontFile" id=9]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 98, 44 )

[sub_resource type="FontFile" id=2]
size = 20
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=3]
length = 0.45
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.2, 0.4 ),
"transitions": PackedFloat32Array( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.501961 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.45
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.2, 0.4 ),
"transitions": PackedFloat32Array( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.501961 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("../..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0.4 ),
"transitions": PackedFloat32Array( 1 ),
"values": [ {
"args": [  ],
"method": "_on_unit_box_fade"
} ]
}

[sub_resource type="FontFile" id=5]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 77, 27 )

[sub_resource type="Animation" id=7]
length = 0.75
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.25, 0.5 ),
"transitions": PackedFloat32Array( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.501961 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="FontFile" id=8]
size = 15
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 44, 43 )

[sub_resource type="FontFile" id=10]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=11]
length = 0.75
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.25, 0.5 ),
"transitions": PackedFloat32Array( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 0.478431, 0.709804, 0.882353, 0.501961 ), Color( 1, 1, 1, 1 ) ]
}

[node name="BattlefieldHUD" type="CanvasLayer"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 134.613, 145.226, 122.236 ],
"_edit_vertical_guides_": [ 45.0, -55.0, 62.2016 ]
}

[node name="Battlefield HUD" type="Control" parent="."]
visible = false
offset_left = 0.0654756
offset_top = -0.0882874
offset_right = 240.066
offset_bottom = 159.912

[node name="Unit Info" type="Panel" parent="Battlefield HUD"]
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -0.222908
offset_top = -45.0
offset_right = 84.7771
offset_bottom = -5.0
theme_override_styles/panel = SubResource( 1 )

[node name="Name" type="Label" parent="Battlefield HUD/Unit Info"]
offset_left = 41.0
offset_top = 8.0
offset_right = 216.0
offset_bottom = 54.0
scale = Vector2( 0.25, 0.25 )
theme_override_fonts/font = SubResource( 2 )
theme_override_colors/font_color = Color( 0, 0, 0, 1 )
theme_override_colors/font_outline_color = Color( 0, 0, 0, 1 )
text = "Name"
align = 1
valign = 1

[node name="ColorRect" type="ColorRect" parent="Battlefield HUD/Unit Info"]
modulate = Color( 0.568627, 0.811765, 0.945098, 0.654902 )
show_behind_parent = true
offset_left = 5.0
offset_top = 7.0
offset_right = 85.0
offset_bottom = 36.0

[node name="FadeAnimU" type="AnimationPlayer" parent="Battlefield HUD/Unit Info"]
anims/Fade = SubResource( 3 )
anims/FadeOut = SubResource( 4 )

[node name="Health" type="Label" parent="Battlefield HUD/Unit Info"]
offset_left = 45.0
offset_top = 22.0
offset_right = 205.0
offset_bottom = 40.0
scale = Vector2( 0.25, 0.25 )
theme_override_fonts/font = SubResource( 5 )
theme_override_colors/font_color = Color( 0, 0, 0, 1 )
theme_override_colors/font_outline_color = Color( 0, 0, 0, 1 )
text = "20 / 20"
align = 1
valign = 1

[node name="Empty HP" type="Sprite2D" parent="Battlefield HUD/Unit Info"]
position = Vector2( 44, 28 )
scale = Vector2( 0.169, 0.237 )
texture = ExtResource( 4 )
centered = false

[node name="Full HP" type="Sprite2D" parent="Battlefield HUD/Unit Info"]
position = Vector2( 44, 28 )
scale = Vector2( 0.169, 0.237 )
texture = ExtResource( 5 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 237, 17 )

[node name="Portrait" type="TextureRect" parent="Battlefield HUD/Unit Info"]
offset_left = 10.0
offset_top = 7.0
offset_right = 35.0
offset_bottom = 36.0
scale = Vector2( 1.2, 1 )
texture = ExtResource( 6 )
expand = true

[node name="Victory Info" type="Panel" parent="Battlefield HUD"]
anchor_left = 1.0
anchor_right = 1.0
offset_left = -50.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = 20.0
theme_override_styles/panel = SubResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="FadeAnimV" type="AnimationPlayer" parent="Battlefield HUD/Victory Info"]
anims/Fade = SubResource( 7 )

[node name="V Name" type="Label" parent="Battlefield HUD/Victory Info"]
offset_left = 1.0
offset_top = 4.0
offset_right = 176.0
offset_bottom = 38.0
scale = Vector2( 0.25, 0.25 )
theme_override_fonts/font = SubResource( 8 )
theme_override_colors/font_outline_color = Color( 0, 0, 0, 1 )
theme_override_colors/font_shadow_color = Color( 0, 0, 0, 1 )
text = "Seize Throne"
align = 1
valign = 1
autowrap = true

[node name="Terrain Info" type="Panel" parent="Battlefield HUD"]
offset_left = 190.0
offset_top = 120.0
offset_right = 235.0
offset_bottom = 155.0
theme_override_styles/panel = SubResource( 9 )
__meta__ = {
"_edit_group_": true
}

[node name="T Name" type="Label" parent="Battlefield HUD/Terrain Info"]
offset_top = 5.0
offset_right = 180.0
offset_bottom = 65.0
scale = Vector2( 0.25, 0.25 )
theme_override_fonts/font = SubResource( 10 )
theme_override_colors/font_outline_color = Color( 0, 0, 0, 1 )
theme_override_colors/font_shadow_color = Color( 0, 0, 0, 1 )
text = "Plains"
align = 1
valign = 1

[node name="Def" type="Label" parent="Battlefield HUD/Terrain Info"]
offset_left = 15.0
offset_top = 26.0
offset_right = 125.0
offset_bottom = 67.0
scale = Vector2( 0.125, 0.125 )
theme_override_fonts/font = ExtResource( 9 )
text = "DEF:"

[node name="Def_Value" type="Label" parent="Battlefield HUD/Terrain Info/Def"]
offset_left = 98.0
offset_right = 142.0
offset_bottom = 42.0
theme_override_fonts/font = ExtResource( 9 )
text = "1"

[node name="Avd" type="Label" parent="Battlefield HUD/Terrain Info"]
offset_left = 15.0
offset_top = 20.0
offset_right = 107.0
offset_bottom = 64.0
scale = Vector2( 0.125, 0.125 )
theme_override_fonts/font = ExtResource( 9 )
text = "AVD:"

[node name="Avd_Value" type="Label" parent="Battlefield HUD/Terrain Info/Avd"]
offset_left = 96.0
offset_right = 142.0
offset_bottom = 42.0
theme_override_fonts/font = ExtResource( 9 )
text = "20"

[node name="FadeAnimT" type="AnimationPlayer" parent="Battlefield HUD/Terrain Info"]
anims/Fade = SubResource( 11 )
